mdapipkg/objects/Error_Log__c.object
<CustomObject>
    <description>Custom Audit Log object to manage error emails</description>
    <fields>
        <fullName>Error_String__c</fullName>
        <description>Holds the entire error string of the failure</description>
        <inlineHelpText>Please enter the entire error string of the failure here</inlineHelpText>
        <label>Error String</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Affiliation Transfer Batch</fullName>
                </value>
                <value>
                    <fullName>Chapter Health Batch</fullName>
                </value>
                <value>
                    <fullName>KG Opportunity Trigger</fullName>
                </value>
                <value>
                    <fullName>Set as Prospect</fullName>
                </value>
                <value>
                    <fullName>Set Products</fullName>
                </value>
                <value>
                    <fullName>Transition Batch</fullName>
                </value>
                <value>
                    <fullName>FIELD_CUSTOM_VALIDATION_EXCEPTION</fullName>
                </value>
                <value>
                    <fullName>CANNOT_INSERT_UPDATE_ACTIVATE_ENTITY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to related opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <description>Holds the ID of the record the failure occurred on</description>
        <inlineHelpText>Please enter the Id of the record this failure occurred on</inlineHelpText>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Error_Type__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Record_Id__c</columns>
        <columns>Error_String__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllTy</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Error_Type__c</columns>
        <columns>Error_String__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Record_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity__c</field>
            <operation>contains</operation>
            <value>jacobs</value>
        </filters>
        <label>All Ty</label>
    </listViews>
    <nameField>
        <displayFormat>ERL-{0000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>